--- a/test.html
+++ b/test.html
@@ -126,7 +126,7 @@
 <nav id="nav">
   <div class="max-w-6xl mx-auto px-4 sm:px-6 py-3 flex items-center justify-between">
     <div class="flex items-center gap-3">
-      <div style="width:40px;height:40px;border-radius:50%;background:var(--green);display:flex;align-items:center;justify-content:center;color:#fff;font-weight:700;font-size:1rem;flex-shrink:0;">SS</div>
+      <div class="w-12 h-12 rounded-full flex items-center justify-center text-white font-bold text-lg" ><img src="./Image/logo.avif" alt=""></div>
       <div>
         <p style="font-family:'Playfair Display',serif;font-weight:700;font-size:.88rem;line-height:1.2;">SS Herbal India</p>
         <p style="font-size:.68rem;color:var(--green);letter-spacing:1.5px;">100% AYURVEDIC</p>
