--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
 <!-- ═══ NAVBAR ═══ -->
 <nav id="nav">
-  <div class="w-full px-4 sm:px-8 py-3 flex items-center justify-between">
+  <div class="w-full px-4 sm:px-8 py-3 flex items-center justify-between overflow-hidden">
     <div class="flex items-center gap-3">
       <div class="w-12 h-12 rounded-full flex items-center justify-center text-white font-bold text-lg" style="background:var(--black);border:2px solid var(--gold);overflow:hidden;flex-shrink:0;"><img src="./Image/logo.avif" alt="SS Herbal India Logo" style="width:100%;height:100%;object-fit:cover;border-radius:50%;"></div>
       <div>
@@ -170,7 +170,7 @@
      
 
 <!-- ═══ HERO ═══ -->
-<section style="background:linear-gradient(160deg,#111111 0%,#1a1a1a 60%,#222222 100%);position:relative;overflow:hidden; padding:25px;" id="hero">
+<section style="background:linear-gradient(160deg,#111111 0%,#1a1a1a 60%,#222222 100%);position:relative; overflow:hidden; padding:25px;" id="hero">
   <div style="position:absolute;inset:0;background-image:url('data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22120%22 height=%22120%22 opacity=%220.07%22%3E%3Cellipse cx=%2260%22 cy=%2260%22 rx=%2218%22 ry=%2250%22 fill=%22%23c9a84c%22 transform=%22rotate(-30,60,60)%22/%3E%3Cellipse cx=%2260%22 cy=%2260%22 rx=%2218%22 ry=%2250%22 fill=%22%23c9a84c%22 transform=%22rotate(30,60,60)%22/%3E%3C/svg%3E');background-size:120px;pointer-events:none;z-index:0;"></div>
   <span style="position:absolute;top:110px;right:7%;font-size:3.5rem;opacity:.18;z-index:1;" class="anim-float">🌿</span>
   <span style="position:absolute;bottom:100px;left:3%;font-size:2.6rem;opacity:.16;z-index:1;animation-delay:.7s;" class="anim-float">🍃</span>
