--- a/index.html
+++ b/index.html
@@ -414,17 +414,17 @@
         <div class="mosaic-wrap">
           <div class="mosaic">
             <div class="iw big">
-              <img src="./Image/UGC.png" alt="Content creator filming with smartphone"/>
+              <img src="./Image/UGC.avif" alt="Content creator filming with smartphone"/>
               <div class="ov"></div>
               <span class="ib">🎬 UGC Creator</span>
             </div>
             <div class="iw">
-              <img src="./Image/herbal.jpg" alt="Herbal Ayurvedic products"/>
+              <img src="./Image/herbal.avif" alt="Herbal Ayurvedic products"/>
               <div class="ov"></div>
               <span class="ib">🌿 Herbal</span>
             </div>
             <div class="iw">
-              <img src="./Image/home.jpg" alt="Ring light filming setup"/>
+              <img src="./Image/home.avif" alt="Ring light filming setup"/>
               <div class="ov"></div>
               <span class="ib">💡 Home Studio</span>
             </div>
@@ -514,15 +514,15 @@
       <div class="rr">
         <div class="about-img-grid" style="display:grid;grid-template-columns:1fr 1fr;gap:10px;">
           <div class="iw span-2" style="grid-row:1/3;height:380px;">
-            <img src="./Image/pure.jpg" alt="Ayurvedic herbal medicine bottles"/>
+            <img src="./Image/pure.avif" alt="Ayurvedic herbal medicine bottles"/>
             <div class="ov"></div><span class="ib">🌿 Pure Herbal</span>
           </div>
           <div class="iw sm-img" style="height:185px;">
-            <img src="./Image/natural.jpg" alt="Herbal spice ingredients"/>
+            <img src="./Image/natural.avif" alt="Herbal spice ingredients"/>
             <div class="ov"></div><span class="ib">🍃 Natural</span>
           </div>
           <div class="iw sm-img" style="height:185px;">
-            <img src="./Image/trust.jpg" alt="Ayurvedic wellness"/>
+            <img src="./Image/trust.avif" alt="Ayurvedic wellness"/>
             <div class="ov"></div><span class="ib">✅ Trusted</span>
           </div>
         </div>
@@ -546,28 +546,28 @@
     </div>
     <div class="roles-grid grid md:grid-cols-2 lg:grid-cols-4 gap-5" style="align-items: stretch;">
       <div class="card reveal" style="padding:0;overflow:hidden;border-top:4px solid var(--gold);">
-        <div class="iw" style="height:220px;border-radius:0;"><img src="./Image/demo.png" alt="UGC creator"/><div class="ov"></div></div>
+        <div class="iw" style="height:220px;border-radius:0;"><img src="./Image/demo.avif" alt="UGC creator"/><div class="ov"></div></div>
         <div style="padding:18px;flex:1;display:flex;flex-direction:column;"><div style="font-size:1.6rem;margin-bottom:8px;">📹</div>
         <h3 style="font-size:1.05rem;font-weight:800;margin-bottom:7px;">UGC Video Creator</h3>
         <p style="font-size:.88rem;color:var(--gray);line-height:1.65;margin-bottom:12px;flex:1;">Authentic product usage videos for Reels &amp; Shorts. Shoot from home.</p>
         <span style="background:var(--gold-xs);color:var(--gold-dk);font-size:.78rem;font-weight:700;padding:5px 13px;border-radius:50px;">🏠 Work From Home</span></div>
       </div>
       <div class="card reveal" style="padding:0;overflow:hidden;border-top:4px solid var(--gold);transition-delay:.1s;">
-        <div class="iw" style="height:220px;border-radius:0;"><img src="./Image/reel.png" alt="Reel creator"/><div class="ov"></div></div>
+        <div class="iw" style="height:220px;border-radius:0;"><img src="./Image/reel.avif" alt="Reel creator"/><div class="ov"></div></div>
         <div style="padding:18px;flex:1;display:flex;flex-direction:column;"><div style="font-size:1.6rem;margin-bottom:8px;">🎞️</div>
         <h3 style="font-size:1.05rem;font-weight:800;margin-bottom:7px;">Reel / Shorts Creator</h3>
         <p style="font-size:.88rem;color:var(--gray);line-height:1.65;margin-bottom:12px;flex:1;">Trending short-form content with hooks, storytelling &amp; formats.</p>
         <span style="background:var(--gold-xs);color:var(--gold-dk);font-size:.78rem;font-weight:700;padding:5px 13px;border-radius:50px;">📱 Mobile Friendly</span></div>
       </div>
       <div class="card reveal" style="padding:0;overflow:hidden;border-top:4px solid var(--gold);transition-delay:.2s;">
-        <div class="iw" style="height:220px;border-radius:0;"><img src="./Image/voice.png" alt="Voice over artist"/><div class="ov"></div></div>
+        <div class="iw" style="height:220px;border-radius:0;"><img src="./Image/voice.avif" alt="Voice over artist"/><div class="ov"></div></div>
         <div style="padding:18px;flex:1;display:flex;flex-direction:column;"><div style="font-size:1.6rem;margin-bottom:8px;">🎙️</div>
         <h3 style="font-size:1.05rem;font-weight:800;margin-bottom:7px;">Voice-Over Artist</h3>
         <p style="font-size:.88rem;color:var(--gray);line-height:1.65;margin-bottom:12px;flex:1;">Clear Hindi or regional language voice for product explainers.</p>
         <span style="background:var(--gold-xs);color:var(--gold-dk);font-size:.78rem;font-weight:700;padding:5px 13px;border-radius:50px;">🗣️ Multi-Language</span></div>
       </div>
       <div class="card reveal" style="padding:0;overflow:hidden;border-top:4px solid var(--gold);transition-delay:.3s;">
-        <div class="iw" style="height:220px;border-radius:0; "><img src="./Image/testimonial.png"  alt="Testimonial creator"/><div class="ov"></div></div>
+        <div class="iw" style="height:220px;border-radius:0; "><img src="./Image/testimonial.avif"  alt="Testimonial creator"/><div class="ov"></div></div>
         <div style="padding:18px;flex:1;display:flex;flex-direction:column;"><div style="font-size:1.6rem;margin-bottom:8px;">⭐</div>
         <h3 style="font-size:1.05rem;font-weight:800;margin-bottom:7px;">Testimonial Creator</h3>
         <p style="font-size:.88rem;color:var(--gray);line-height:1.65;margin-bottom:12px;flex:1;">Genuine, relatable testimonial videos. Real stories about wellness.</p>
@@ -587,7 +587,7 @@
     </div>
     <div class="offer-grid grid lg:grid-cols-3 gap-5 mb-5" style="align-items: stretch;">
       <div class="iw offer-tall-img reveal" style="height:320px;border-radius:16px;grid-row:span 2/span 2;">
-        <img src="./Image/build.png" alt="Team collaboration"/>
+        <img src="./Image/build.avif" alt="Team collaboration"/>
         <div class="ov"></div>
         <div style="position:absolute;bottom:16px;left:16px;right:16px;">
           <p style="color:#fff;font-size:1.1rem;font-weight:800;">Built for Freelance Creators</p>
@@ -639,19 +639,19 @@
     </div>
     <div class="create-grid grid grid-cols-2 md:grid-cols-3 gap-4" style="align-items: stretch;">
       <div class="card reveal" style="padding:0;overflow:hidden;">
-        <div class="iw" style="height:220px;border-radius:0;"><img src="./Image/demo.png" alt="Product demo video"/><div class="ov"></div></div>
+        <div class="iw" style="height:220px;border-radius:0;"><img src="./Image/demo.avif" alt="Product demo video"/><div class="ov"></div></div>
         <div style="padding:14px;flex:1;display:flex;flex-direction:column;"><div style="font-size:1.5rem;margin-bottom:6px;">📹</div><h4 style="font-size:.92rem;font-weight:800;">Product Demo</h4><p style="font-size:.78rem;color:var(--gray);margin-top:3px;flex:1;">30–90 sec natural usage video.</p></div>
       </div>
       <div class="card reveal" style="padding:0;overflow:hidden;transition-delay:.1s;">
-        <div class="iw" style="height:220px;border-radius:0;"><img src="./Image/befor&after.png" alt="Before after concept"/><div class="ov"></div></div>
+        <div class="iw" style="height:220px;border-radius:0;"><img src="./Image/befor&after.avif" alt="Before after concept"/><div class="ov"></div></div>
         <div style="padding:14px;flex:1;display:flex;flex-direction:column;"><div style="font-size:1.5rem;margin-bottom:6px;">✨</div><h4 style="font-size:.92rem;font-weight:800;">Before / After</h4><p style="font-size:.78rem;color:var(--gray);margin-top:3px;flex:1;">Wellness transformation storytelling.</p></div>
       </div>
       <div class="card reveal" style="padding:0;overflow:hidden;transition-delay:.2s;">
-        <div class="iw" style="height:220px;border-radius:0;"><img src="./Image/insta.png" alt="Instagram Reel"/><div class="ov"></div></div>
+        <div class="iw" style="height:220px;border-radius:0;"><img src="./Image/insta.avif" alt="Instagram Reel"/><div class="ov"></div></div>
         <div style="padding:14px;flex:1;display:flex;flex-direction:column;"><div style="font-size:1.5rem;margin-bottom:6px;">🎞️</div><h4 style="font-size:.92rem;font-weight:800;">Instagram Reel</h4><p style="font-size:.78rem;color:var(--gray);margin-top:3px;flex:1;">15–30 sec hook-based vertical video.</p></div>
       </div>
       <div class="card reveal" style="padding:0;overflow:hidden;transition-delay:.3s;">
-        <div class="iw" style="height:220px;border-radius:0;"><img src="./Image/youtube.png" alt="YouTube Shorts"/><div class="ov"></div></div>
+        <div class="iw" style="height:220px;border-radius:0;"><img src="./Image/youtube.avif" alt="YouTube Shorts"/><div class="ov"></div></div>
         <div style="padding:14px;flex:1;display:flex;flex-direction:column;"><div style="font-size:1.5rem;margin-bottom:6px;">▶️</div><h4 style="font-size:.92rem;font-weight:800;">YouTube Shorts</h4><p style="font-size:.78rem;color:var(--gray);margin-top:3px;flex:1;">Educational vertical shorts.</p></div>
       </div>
       <div class="card reveal" style="padding:0;overflow:hidden;transition-delay:.4s;">
@@ -659,7 +659,7 @@
         <div style="padding:14px;flex:1;display:flex;flex-direction:column;"><div style="font-size:1.5rem;margin-bottom:6px;">🎙️</div><h4 style="font-size:.92rem;font-weight:800;">Voice-Over Script</h4><p style="font-size:.78rem;color:var(--gray);margin-top:3px;flex:1;">Script provided — you bring the voice.</p></div>
       </div>
       <div class="card reveal" style="padding:0;overflow:hidden;transition-delay:.5s;">
-        <div class="iw" style="height:220px;border-radius:0;"><img src="./Image/doctor.png" alt="Expert info visual"/><div class="ov"></div></div>
+        <div class="iw" style="height:220px;border-radius:0;"><img src="./Image/doctor.avif" alt="Expert info visual"/><div class="ov"></div></div>
         <div style="padding:14px;flex:1;display:flex;flex-direction:column;"><div style="font-size:1.5rem;margin-bottom:6px;">👨‍⚕️</div><h4 style="font-size:.92rem;font-weight:800;">Expert Info Visual</h4><p style="font-size:.78rem;color:var(--gray);margin-top:3px;flex:1;">Doctor-style informational content.</p></div>
       </div>
     </div>
@@ -672,7 +672,7 @@
     <div class="growth-grid grid lg:grid-cols-2 gap-12 items-center">
       <div class="rl">
         <div class="iw" style="height:320px;border-radius:16px;">
-          <img src="./Image/growth.png" alt="Career growth"/>
+          <img src="./Image/growth.avif" alt="Career growth"/>
           <div class="ov" style="background:linear-gradient(to top,rgba(0,0,0,.85),transparent 60%);"></div>
           <div style="position:absolute;bottom:18px;left:18px;">
             <p style="color:var(--gold-lt);font-size:1.2rem;font-weight:800;">Your Creator Career</p>
@@ -739,15 +739,15 @@
       <div class="rr">
         <div class="support-img-grid" style="display:grid;grid-template-columns:1fr 1fr;gap:10px;">
           <div class="iw span-2" style="grid-row:1/3;height:380px;">
-            <img src="./Image/team.png" alt="Team support"/>
+            <img src="./Image/team.avif" alt="Team support"/>
             <div class="ov"></div><span class="ib">👥 Team Support</span>
           </div>
           <div class="iw" style="height:185px;">
-            <img src="./Image/desk.png" alt="Script desk"/>
+            <img src="./Image/desk.avif" alt="Script desk"/>
             <div class="ov"></div><span class="ib">📝 Script Desk</span>
           </div>
           <div class="iw" style="height:185px;">
-            <img src="./Image/feedback.png" alt="Feedback session"/>
+            <img src="./Image/feedback.avif" alt="Feedback session"/>
             <div class="ov"></div><span class="ib">💬 Feedback</span>
           </div>
         </div>
