--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
     <picture>
       <source media="(min-width: 768px)" srcset="./Image/background1.png">
       <source media="(max-width: 767px)" srcset="./Image/background.png">
-      <img src="./Image/background.png" alt="SS Herbal India - Content Creator Hiring" style="width:100%; height:auto; object-fit: contain;box-shadow:0 8px 30px rgba(0,0,0,0.3);margin:0 auto;display:block;border-radius:12px;"/>
+      <img src="./Image/background.png" alt="SS Herbal India - Content Creator Hiring" style="width:100%; height:auto; object-fit: contain;box-shadow:0 8px 30px rgba(0,0,0,0.3);margin:0 auto;display:block;"/>
     </picture>
   </div>
 
@@ -564,14 +564,14 @@
     </div>
     <div class="roles-grid grid md:grid-cols-2 lg:grid-cols-4 gap-5" style="align-items: stretch;">
       <div class="card reveal" style="padding:0;overflow:hidden;border-top:4px solid var(--gold);">
-        <div class="iw" style="height:220px;border-radius:0;"><img src="./Image/demo.avif" alt="UGC creator"/><div class="ov"></div></div>
+        <div class="iw" style="height:220px;border-radius:0;"><img src="./Image/demo.png" alt="UGC creator"/><div class="ov"></div></div>
         <div style="padding:18px;flex:1;display:flex;flex-direction:column;"><div style="font-size:1.6rem;margin-bottom:8px;">📹</div>
         <h3 style="font-size:1.05rem;font-weight:800;margin-bottom:7px;">UGC Video Creator</h3>
         <p style="font-size:.88rem;color:var(--gray);line-height:1.65;margin-bottom:12px;flex:1;">Authentic product usage videos for Reels &amp; Shorts. Shoot from home.</p>
         <span style="background:var(--gold-xs);color:var(--gold-dk);font-size:.78rem;font-weight:700;padding:5px 13px;border-radius:50px;">🏠 Work From Home</span></div>
       </div>
       <div class="card reveal" style="padding:0;overflow:hidden;border-top:4px solid var(--gold);transition-delay:.1s;">
-        <div class="iw" style="height:220px;border-radius:0;"><img src="./Image/reel.avif" alt="Reel creator"/><div class="ov"></div></div>
+        <div class="iw" style="height:220px;border-radius:0;"><img src="./Image/reel.png" alt="Reel creator"/><div class="ov"></div></div>
         <div style="padding:18px;flex:1;display:flex;flex-direction:column;"><div style="font-size:1.6rem;margin-bottom:8px;">🎞️</div>
         <h3 style="font-size:1.05rem;font-weight:800;margin-bottom:7px;">Reel / Shorts Creator</h3>
         <p style="font-size:.88rem;color:var(--gray);line-height:1.65;margin-bottom:12px;flex:1;">Trending short-form content with hooks, storytelling &amp; formats.</p>
